[package]
name = "ohm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6.0-beta.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
derive_more = "0.99.0"